k8s/client/1-deployment-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server-depl
#  namespace: client-ns

spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-server
  template:
    metadata:
      labels:
        app: go-server

    spec:
      containers:
        - name: go-image
          image: mokhlesur96/go-app:84239b87887a23e717a0ae06425a6ef93e64440e
          ports:
            - containerPort: 8081
