k8s/client/service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-svc
  namespace: client-ns

spec:
  selector:
    app: go-server

  ports:
    - name: go-server
      port: 8081
      targetPort: 8081
      protocol: TCP

  type: NodePort
